# mcp-demo

./: main.py  pyproject.toml
environments/airtable_mcp_env/: README.md  airtable_mcp_env.py  pyproject.toml
environments/airtable_mcp_env/outputs/evals/airtable-mcp-env--gpt-4.1-mini/bd404410/: metadata.json  results.jsonl
environments/mcp_env/: mcp_env.py
environments/mcp_env/src/: mcp_server_connection.py
environments/mcp_sandbox_env/: README.md  mcp_sandbox_env.py  pyproject.toml
environments/mcp_sandbox_env/examples/: __init__.py  box_config.py  browserbase_config.py  mongodb_config.py  template_config.py
environments/mcp_sandbox_env/examples/browserbase_filtered/: __init__.py  config.py  dataset.py  rubric.py
environments/mcp_sandbox_env/src/: mcp_server_connection.py  mcp_tool_wrapper.py
environments/zapier_env_synth/: README.md  pyproject.toml  zapier_env_synth.py
environments/zapier_env_synth/outputs/evals/zapier-env-synth--gpt-4.1-mini/76cae946/: metadata.json  results.jsonl
environments/zapier_mcp/outputs/evals/zapier-mcp--gpt-4.1/6380e016/: results.jsonl
