[project]
name = "zapier-env-synth"
description = "Your environment description here"
tags = ["placeholder-tag", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.5.post0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["zapier_env_synth.py", "src"]

[tool.uv.sources]
verifiers = { git = "https://github.com/primeintellect-ai/verifiers", branch = "cdreetz/mcp-env-v2" }
